--- a/frontend-LF/src/app/Shared/footer/footer.component.html
+++ b/frontend-LF/src/app/Shared/footer/footer.component.html
@@ -4,16 +4,16 @@
       <div class="blockA">Accepted payments :</div>
       <div class="blockB">
         <div class="elem1">
-          <img src="assets/images/visa.png" height="80px" width="80px" />
+          <img src="assets/images/visa.png" height="40px" width="60px" />
         </div>
         <div class="elem2">
-          <img src="assets/images/mastercard.png" height="80px" width="80px" />
+          <img src="assets/images/mastercard.png" height="40px" width="60px" />
         </div>
         <div class="elem3">
-          <img src="assets/images/paypal.png" height="80px" width="80px" />
+          <img src="assets/images/paypal.png" height="40px" width="60px" />
         </div>
         <div class="elem4">
-          <img src="assets/images/Apple Pay.png" height="80px" width="80px" />
+          <img src="assets/images/applepay.png" height="40px" width="60px" />
         </div>
       </div>
     </div>
@@ -22,10 +22,10 @@
       <br />
       <div class="blockD">
         <img
-          src="assets/images/DHL.png"
+          src="assets/images/dhl.png"
           alt="logo_DHL"
-          height="80px"
-          width="120px"
+          height="40px"
+          width="100px"
         />
       </div>
     </div>
@@ -33,11 +33,11 @@
 
   <div class="carre2">
     <div class="block3">
-      <div class="blockE">Informations</div>
+      <div class="blockE">Information</div>
       <br />
       <div><a href="#">FAQ</a></div>
       <div><a href="#">SiteMap</a></div>
-      <div><a href="#">Underlekht</a></div>
+      <div><a href="#">Other</a></div>
     </div>
     <div class="block4">
       <div class="block4bis">
@@ -57,31 +57,31 @@
       </div>
     </div>
     <div class="block5">
-      <div class="rs">Find us social media plateforms</div>
+      <div class="rs">Find us social media platforms:</div>
       <br />
       <div class="logos">
         <div class="elem5">
           <img
             src="assets/images/facebook.png"
             alt="reseaux-sociaux"
-            height="80px"
-            width="80px"
+            height="40px"
+            width="40px"
           />
         </div>
         <div class="elem6">
           <img
-            src="assets/images/instagram.webp"
+            src="assets/images/instagram.png"
             alt="reseaux-sociaux"
-            height="80px"
-            width="100px"
+            height="40px"
+            width="40px"
           />
         </div>
         <div class="elem7">
           <img
             src="assets/images/twitter.png"
             alt="reseaux-sociaux"
-            height="80px"
-            width="80px"
+            height="40px"
+            width="40px"
           />
         </div>
       </div>
