--- a/frontend-LF/src/app/Shared/header/header.component.html
+++ b/frontend-LF/src/app/Shared/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="global">
   <div class="L1">
     <div class="logo-position">
-      <img src="assets/images/logo.png" height="200px" width="200px" />
+      <img src="assets/images/logo.png" height="80px" width="120px" />
     </div>
     <div class="animate_animated animate__slideInLeft">
       <img
@@ -11,6 +11,7 @@
         width="150px"
       />
     </div>
+    <!-- <div class="navigation-right"> -->
     <div class="creds">
       <a routerLink="/users/login">Login</a>
     </div>
@@ -43,6 +44,7 @@
         <mat-icon>add_shopping_cart</mat-icon>
       </button>
     </div>
+    <!-- </div> -->
   </div>
 
   <div class="L2">
