--- a/frontend-LF/src/app/Shared/header/header.component.css
+++ b/frontend-LF/src/app/Shared/header/header.component.css
@@ -1,7 +1,7 @@
 .global {
   display: flex;
   flex-direction: column;
-  background-color: rgb(180, 116, 180);
+  background-color: rgb(29, 28, 30);
   padding-bottom: 55px;
 }
 
@@ -13,14 +13,9 @@
   margin-left: 400px;
 }
 
-.L1 {
-  display: flex;
-  flex-direction: row;
-  padding-top: 50px;
-}
-
+.L1,
 .L2 {
-  margin-top: 50px;
+  padding-top: 50px;
   display: flex;
   flex-direction: row;
 }
@@ -44,12 +39,19 @@ h1 {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
+/* .navigation-right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} */
+
 .creds {
   margin-left: 120px;
 }
 
 .icons {
-  margin-left: 60px;
+  margin-left: 40px;
+  margin-top: -15px;
 }
 
 mat-icon {
